2004-07-05  Murray Cumming  <murrayc@murrayc.com>

	* glom/document/Document_Glom.cc: set_modified(): Call save_before() 
	and write_to_disk() instead of save() because that gets all the data 
	from the views again.

2004-07-05  Murray Cumming  <murrayc@murrayc.com>

	* glom/document/Document_Glom.cc: set_modified(): Do nothing if the 
	modified status is already what it would be set to, to prevent 
	infinite loops.
	* glom/application.cc offer_new_or_existing(): Keep offering if the 
	user cancels at some stage.

2004-07-04  Murray Cumming  <murrayc@murrayc.com>

	* glom/document/Document_Glom.cc: When in developer mode, save all 
	changes immediately and automatically. Lets see how much disk activity 
	this creates.

2004-07-04  Murray Cumming  <murrayc@murrayc.com>

	* glom/applciation,cc init_layout(): Do not create the toolbar, 
	because it is not useful for this application.

2004-07-04  Murray Cumming  <murrayc@murrayc.com>

	* glom/navigation/box_db_tables.cc: save_to_document(): Only save 
	something when something has been modified.

2004-07-04  Christophe Merlet  <redfox@redfoxcenter.org>

	* configure.in: Added "fr" (French) to ALL_LINGUAS.

2004-07-04  Murray Cumming  <murrayc@murrayc.com>

	* glom/document/Document_Glom.[h|cc]: Cache all the data in 
	member variables and only deal with the XML DOM when loading and 
	saving, in overrides of load_before() and save_after(). This makes the 
	code nicer and faster.

2004-07-02  Murray Cumming  <murrayc@murrayc.com>

	* Renamed all the ugly on_AddDel_* methods to slightly less ugly 
	on_adddel_* methods.

2004-07-02  Murray Cumming  <murrayc@murrayc.com>

	* Added glom.keys and glom.mime, and added rules in Makefile.am to 
	install them. This is for the old MIME-type registration system, 
	because GNOME 2.6 seems to need both the old and new systems.

0.8.5:

2004-07-02  Murray Cumming  <murrayc@murrayc.com>

	* glom/utility_widgets/adddel/adddel_withbuttons.cc: Use a stock 